--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-plugin-sharp": "^2.6.14",
     "gatsby-source-filesystem": "^2.3.14",
     "gatsby-transformer-sharp": "^2.5.7",
+    "js-base64": "^3.2.4",
     "polished": "^3.6.5",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
