--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "gatsby-plugin-react-helmet": "^3.3.6",
     "gatsby-plugin-sharp": "^2.6.14",
     "gatsby-source-filesystem": "^2.3.14",
+    "gatsby-source-graphql": "^2.6.2",
     "gatsby-transformer-sharp": "^2.5.7",
     "js-base64": "^3.2.4",
+    "mailgun-js": "^0.22.0",
     "polished": "^3.6.5",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
