--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run format"
+    }
+  },
   "dependencies": {
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
@@ -42,6 +47,8 @@
   "devDependencies": {
     "babel-jest": "^26.1.0",
     "babel-preset-gatsby": "^0.5.4",
+    "husky": "^4.2.5",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^26.1.0",
     "prettier": "2.0.5"
   },
