--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "dev": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
+    "format": "pretty-quick --staged --no-restage --pattern \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
@@ -50,7 +50,8 @@
     "husky": "^4.2.5",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.1.0",
-    "prettier": "2.0.5"
+    "prettier": "2.0.5",
+    "pretty-quick": "^3.0.2"
   },
   "keywords": [
     "gatsby"
