--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "clean": "gatsby clean",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "husky": {
     "hooks": {
@@ -45,13 +47,20 @@
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.11.6",
+    "@storybook/addon-actions": "^6.0.21",
+    "@storybook/addon-essentials": "^6.0.21",
+    "@storybook/addon-links": "^6.0.21",
+    "@storybook/react": "^6.0.21",
     "babel-jest": "^26.1.0",
+    "babel-loader": "^8.1.0",
     "babel-preset-gatsby": "^0.5.4",
     "husky": "^4.2.5",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.1.0",
     "prettier": "2.0.5",
-    "pretty-quick": "^3.0.2"
+    "pretty-quick": "^3.0.2",
+    "react-is": "^16.13.1"
   },
   "keywords": [
     "gatsby"
