--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@storybook/addon-actions": "^6.0.21",
     "@storybook/addon-essentials": "^6.0.21",
     "@storybook/addon-links": "^6.0.21",
+    "@storybook/addons": "^6.0.22",
     "@storybook/react": "^6.0.21",
     "babel-jest": "^26.1.0",
     "babel-loader": "^8.1.0",
